# scry

./: .dockerignore  .gitignore  CLAUDE.md  CURRENT_TASK.md  Cargo.toml  Dockerfile  README.md  TODO.md  depot.json  docker-bake.hcl
.githooks/: pre-commit
.github/workflows/: ci.yml  release-desktop.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: client.rs  config.rs  cri.rs  discovery.rs  filter.rs  lib.rs  main.rs  promparse.rs  scrape.rs  stream.rs
crates/binschema-runtime/: Cargo.toml
crates/binschema-runtime/src/: bitstream.rs  codecs.rs  context.rs  lib.rs
crates/block/: Cargo.toml
crates/block/src/: bloom.rs  dummy.rs  events.rs  fence.rs  lib.rs  logs.rs  meta.rs  metrics.rs  postings.rs  profiles.rs  traces.rs
crates/block/tests/: merge.rs  metrics_roundtrip.rs  profiles_roundtrip.rs  traces_roundtrip.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  snapshot.rs
crates/catalog/tests/: roundtrip.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/tests/: reconnect.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: consume.rs  lease.rs  lib.rs  maintain.rs  poll.rs
crates/cluster/tests/: convergence.rs
crates/compact/: Cargo.toml
crates/compact/src/: engine.rs  lib.rs  main.rs  merge.rs  policy.rs
crates/compact/tests/: compaction_e2e.rs  fenced_abort.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: aws_sign.rs  cli.rs  lib.rs  loki.rs  main.rs  mimir.rs  opensearch.rs  otlp.rs  promwrite.rs  pyroscope.rs  sink.rs  sink_scry.rs  tls.rs  upstream.rs  wire.rs
crates/gateway/tests/: otlp_map.rs
crates/match/: Cargo.toml
crates/match/src/: lib.rs
crates/noise-sink/: Cargo.toml
crates/noise-sink/src/: main.rs
crates/noise-spewer/: Cargo.toml
crates/noise-spewer/src/: gen.rs  main.rs
crates/objstore/: Cargo.toml
crates/objstore/src/: lib.rs  pool.rs  store.rs
crates/objstore/tests/: garage.rs
crates/proto/: Cargo.toml
crates/proto/src/: build.rs  constants.rs  fingerprint.rs  framing.rs  generated.rs  generated_query.rs  lib.rs  streaming.rs
crates/query/: Cargo.toml
crates/query/src/: bloom_cache.rs  body_bloom.rs  cli.rs  evict.rs  flight_proto.rs  lib.rs  logs.rs  metadata.rs  postings.rs  postings_cache.rs  profiles.rs  result_cache.rs  table.rs  traces.rs  wire.rs
crates/query/tests/: end_to_end.rs  logs_end_to_end.rs
crates/retention/: Cargo.toml
crates/retention/src/: engine.rs  lib.rs  main.rs  policy.rs
crates/retention/tests/: retention_e2e.rs
crates/scry/: Cargo.toml
crates/scry-ingestd/: Cargo.toml
crates/scry-ingestd/src/: lib.rs  main.rs
crates/scry-list/: Cargo.toml
crates/scry-list/src/: lib.rs  main.rs
crates/scry-queryd/: Cargo.toml
crates/scry-queryd/src/: lib.rs  main.rs  tail_relay.rs
crates/scry-webui/: Cargo.toml  build.rs
crates/scry-webui/src/: assets.rs  auth.rs  lib.rs  main.rs  query.rs
crates/scry-webui/tests/: auth.rs  query.rs
crates/scry/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: decode.rs  flight.rs  lib.rs  live_merge.rs  live_ring.rs  pipeline.rs  query_service.rs  server.rs  stats.rs  tail.rs
crates/server/tests/: flight_e2e.rs  query_e2e.rs
crates/tail/: Cargo.toml
crates/tail/src/: lib.rs
crates/valkey/: Cargo.toml
crates/valkey/src/: client.rs  lease.rs  lib.rs  pubsub.rs  registry.rs  sink.rs
crates/valkey/tests/: valkey_integration.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
crates/wal/tests/: roundtrip.rs
deploy/k8s/: agent-config.example.yaml  agent-daemonset.yaml  agent-rbac.yaml  namespace.yaml  objstore-secret.example.yaml  queryd-deployment.yaml  queryd-service.yaml  server-service.yaml  server-statefulset.yaml
deploy/systemd/: scry-webui.service  webui.env.example
desktop/: .gitignore  README.md  index.html  install.sh  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/scripts/: smoke-protocol.ts  stamp-version.mjs  trace-render-check.ts
desktop/src/: App.tsx  env.ts  format.ts  global.d.ts  index.tsx  severity.ts  store.ts  styles.css  traces.test.ts  traces.ts  volume.test.ts  volume.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: FramesView.tsx  LabelBrowser.tsx  LoginForm.tsx  QueryForm.tsx  ResultsTable.tsx  TracesView.tsx  VolumePanel.tsx
desktop/src/proto/: binary-reader.ts  bit-stream.ts  crc32.ts  errors.ts  expr-helpers.ts  expression-evaluator.ts  generated.ts  node-file.ts  seekable-bit-stream.ts
desktop/src/protocol/: client.ts  constants.ts  framing.ts  transport-http.ts  transport-tauri.ts  transport.ts
docker/garage/: docker-compose.yml  garage.toml  init.sh
docker/valkey/: docker-compose.yml
docs/: ARCHITECTURE.md  decisions.md  v0.1-storage.md
proto/: README.md  ingest.schema.json  query.schema.json
scripts/: dev-garage-down.sh  dev-garage-up.sh  dev-valkey-up.sh  gen-proto-all.sh  gen-proto-check.sh  gen-proto-ts.sh  gen-proto.sh  profile-query-deep.sh  profile-query.sh  release.sh  smoke-agent-config.sh  smoke-agent-kubelet.sh  smoke-agent-metrics.sh  smoke-catalog-snapshot.sh  smoke-gateway.sh  smoke-live.sh  smoke-multi.sh  smoke-tail-queryd.sh  smoke-tail.sh  smoke-webui.sh  smoke.sh  stamp-version.mjs
website/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
website/src/: App.tsx  content.ts  index.tsx
website/src/components/: Background.module.css  Background.tsx  CTA.module.css  CTA.tsx  Features.module.css  Features.tsx  Footer.module.css  Footer.tsx  GetStarted.module.css  GetStarted.tsx  Hero.module.css  Hero.tsx  Logo.tsx  Nav.module.css  Nav.tsx  Problem.module.css  Problem.tsx  Protocols.module.css  Protocols.tsx
website/src/lib/: reveal.ts
website/src/styles/: global.css
