[workspace]
resolver = "2"
members = [
    "crates/binschema-runtime",
    "crates/proto",
    "crates/objstore",
    "crates/wal",
    "crates/block",
    "crates/catalog",
    "crates/noise-spewer",
    "crates/noise-sink",
    "crates/scry-list",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serialexp/scry"

[workspace.dependencies]
binschema-runtime = { path = "crates/binschema-runtime" }
scry-proto        = { path = "crates/proto" }
scry-objstore     = { path = "crates/objstore" }
scry-wal          = { path = "crates/wal" }
scry-block        = { path = "crates/block" }
scry-catalog      = { path = "crates/catalog" }

anyhow    = "1"
arrow     = "53"
bytes     = "1"
chrono    = { version = "0.4", default-features = false, features = ["clock"] }
clap      = { version = "4", features = ["derive"] }
crc32fast = "1"
futures   = "0.3"
object_store = "0.11"
parquet   = "53"
rand      = "0.8"
rand_distr = "0.4"
serde     = "1"
serde_json = "1"
thiserror = "1"
tokio     = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal", "fs"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "1.6"
url       = "2"
uuid      = { version = "1", features = ["v7", "fast-rng", "serde"] }
zstd      = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
