[workspace]
resolver = "2"
members = [
    "crates/binschema-runtime",
    "crates/proto",
    "crates/objstore",
    "crates/wal",
    "crates/block",
    "crates/catalog",
    "crates/server",
    "crates/agent",
    "crates/noise-spewer",
    "crates/noise-sink",
    "crates/scry-list",
    "crates/query",
    "crates/scry-queryd",
]

[workspace.package]
edition = "2021"
# kube-rs 3.x sets the floor: its MSRV is 1.88. Everything else in the
# workspace builds well below this; the agent's Kubernetes client is what
# pins us here.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serialexp/scry"

[workspace.dependencies]
binschema-runtime = { path = "crates/binschema-runtime" }
scry-proto        = { path = "crates/proto" }
scry-objstore     = { path = "crates/objstore" }
scry-wal          = { path = "crates/wal" }
scry-block        = { path = "crates/block" }
scry-catalog      = { path = "crates/catalog" }
scry-server       = { path = "crates/server" }
scry-query        = { path = "crates/query" }

anyhow    = "1"
arrow     = "58"
async-trait = "0.1"
datafusion = "53"
bytes     = "1"
chrono    = { version = "0.4", default-features = false, features = ["clock"] }
clap      = { version = "4", features = ["derive"] }
crc32fast = "1"
futures   = "0.3"
k8s-openapi = { version = "0.27", features = ["latest"] }
kube      = { version = "3", default-features = false, features = ["client", "runtime", "rustls-tls", "ring"] }
mimalloc  = { version = "0.1", default-features = false }
num_cpus  = "1"
object_store = "0.13"
parquet   = "58"
rand      = "0.8"
rand_distr = "0.4"
serde     = "1"
serde_json = "1"
thiserror = "1"
tokio     = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal", "fs"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "1.6"
url       = "2"
uuid      = { version = "1", features = ["v7", "fast-rng", "serde"] }
zstd      = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1

# Profiling profile: release-quality optimizations with full debug info
# so flamegraphs show real function names (not `??`) and inlined frames.
# Use via `cargo build --profile profiling` or `cargo flamegraph
# --profile profiling`. Binaries land in `target/profiling/`. See
# `scripts/profile-query.sh` for the canned harness.
[profile.profiling]
inherits = "release"
debug = "full"
strip = false
