[workspace]
resolver = "2"
members = [
    "crates/binschema-runtime",
    "crates/proto",
    "crates/match",
    "crates/objstore",
    "crates/wal",
    "crates/block",
    "crates/catalog",
    "crates/server",
    "crates/client",
    "crates/gateway",
    "crates/agent",
    "crates/noise-spewer",
    "crates/scry-ingestd",
    "crates/scry-list",
    "crates/query",
    "crates/scry-queryd",
    "crates/compact",
    "crates/retention",
    "crates/cluster",
    "crates/valkey",
    "crates/scry-webui",
    "crates/tail",
    "crates/scry",
]
# The desktop query app (Tauri + SolidJS) is its own crate with a heavy,
# unrelated dependency tree (tauri, webkit bindings). It is intentionally
# NOT a workspace member so `cargo build --workspace` / `cargo test
# --workspace` stay fast and focused on the core. Build it from inside
# desktop/src-tauri (or via `cargo tauri` from desktop/).
exclude = [
    "desktop/src-tauri",
]

[workspace.package]
# Single source of truth for the version of every first-party crate. Bump it
# with `scripts/release.sh <version>`, which also creates the matching `vX.Y.Z`
# git tag — keeping crate versions and release tags in lockstep. (The vendored
# `binschema-runtime` is the one exception: it tracks upstream binschema, not
# scry's release cadence, so it pins its own version.)
version = "0.14.0"
edition = "2021"
# kube-rs 3.x sets the floor: its MSRV is 1.88. Everything else in the
# workspace builds well below this; the agent's Kubernetes client is what
# pins us here.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serialexp/scry"

[workspace.dependencies]
# AWS SigV4 request signing for the gateway's OpenSearch sink (Amazon
# OpenSearch Service / Serverless reject unsigned requests). aws-config pulls
# credentials + region from the default chain (env, profile, IRSA, IMDS).
aws-config             = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-credential-types   = { version = "1", features = ["hardcoded-credentials"] }
aws-sigv4              = { version = "1", default-features = false, features = ["sign-http"] }

binschema-runtime = { path = "crates/binschema-runtime" }
scry-proto        = { path = "crates/proto" }
scry-match        = { path = "crates/match" }
scry-objstore     = { path = "crates/objstore" }
scry-wal          = { path = "crates/wal" }
scry-block        = { path = "crates/block" }
scry-catalog      = { path = "crates/catalog" }
scry-server       = { path = "crates/server" }
scry-client       = { path = "crates/client" }
scry-query        = { path = "crates/query" }
scry-compact      = { path = "crates/compact" }
scry-retention    = { path = "crates/retention" }
scry-cluster      = { path = "crates/cluster" }
scry-valkey       = { path = "crates/valkey" }
scry-ingestd      = { path = "crates/scry-ingestd" }
scry-queryd       = { path = "crates/scry-queryd" }
scry-list         = { path = "crates/scry-list" }
scry-agent        = { path = "crates/agent" }
scry-gateway      = { path = "crates/gateway" }
scry-webui        = { path = "crates/scry-webui" }
scry-tail          = { path = "crates/tail" }

anyhow    = "1"
arrow     = "58"
async-trait = "0.1"
axum      = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
datafusion = "53"
bytes     = "1"
fred      = "10"
chrono    = { version = "0.4", default-features = false, features = ["clock"] }
clap      = { version = "4", features = ["derive"] }
cookie    = { version = "0.18", features = ["key-expansion"] }
crc32fast = "1"
futures   = "0.3"
k8s-openapi = { version = "0.27", features = ["latest"] }
kube      = { version = "3", default-features = false, features = ["client", "runtime", "rustls-tls", "ring"] }
mimalloc  = { version = "0.1", default-features = false }
mime_guess = "2"
num_cpus  = "1"
object_store = "0.13"
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace"] }
parquet   = "58"
prost     = "0.14"
rand      = "0.8"
rand_distr = "0.4"
regex     = "1"
reqwest   = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde     = "1"
serde_json = "1"
snap      = "1"
thiserror = "1"
time      = "0.3"
toml      = "0.8"
tokio     = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal", "fs"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "1.6"
url       = "2"
uuid      = { version = "1", features = ["v7", "fast-rng", "serde"] }
zstd      = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1

# Profiling profile: release-quality optimizations with full debug info
# so flamegraphs show real function names (not `??`) and inlined frames.
# Use via `cargo build --profile profiling` or `cargo flamegraph
# --profile profiling`. Binaries land in `target/profiling/`. See
# `scripts/profile-query.sh` for the canned harness.
[profile.profiling]
inherits = "release"
debug = "full"
strip = false
