[package]
name        = "scry-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "scry log-collection agent: discovers pods via the Kubernetes API, tails CRI container logs, and ships them over the native binschema wire to a scry ingest server."

[lib]
name = "scry_agent"
path = "src/lib.rs"

[dependencies]
anyhow            = { workspace = true }
chrono            = { workspace = true }
clap              = { workspace = true, features = ["env"] }
futures           = { workspace = true }
k8s-openapi       = { workspace = true }
kube              = { workspace = true }
reqwest           = { workspace = true }
scry-client       = { workspace = true }
scry-match        = { workspace = true }
scry-proto        = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
tokio             = { workspace = true }
toml              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
uuid              = { workspace = true }
zstd              = { workspace = true }

[lints]
workspace = true
