[package]
name        = "scry-block"
version     = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Block builder + reader: arrow RecordBatch in, parquet on object storage out, plus a JSON sidecar of block metadata."

[lib]
name = "scry_block"
path = "src/lib.rs"

[dependencies]
anyhow        = { workspace = true }
arrow         = { workspace = true }
bytes         = { workspace = true }
chrono        = { workspace = true }
object_store  = { workspace = true }
parquet       = { workspace = true, features = ["arrow", "object_store"] }
scry-objstore = { workspace = true }
scry-proto    = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
twox-hash     = { workspace = true }
uuid          = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio   = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
