[package]
name        = "scry-compact"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "v0.8 size-tiered compaction: merge many small blocks into fewer larger ones (single-instance)."

[lib]
name = "scry_compact"
path = "src/lib.rs"

[dependencies]
anyhow             = { workspace = true }
arrow              = { workspace = true }
bytes              = { workspace = true }
clap               = { workspace = true }
datafusion         = { workspace = true }
futures            = { workspace = true }
object_store       = { workspace = true }
parquet            = { workspace = true }
scry-block         = { workspace = true }
scry-catalog       = { workspace = true }
scry-objstore      = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
url                = { workspace = true }
uuid               = { workspace = true }

[dev-dependencies]
scry-query         = { workspace = true }
scry-proto         = { workspace = true }
tempfile           = "3"

[lints]
workspace = true
