[package]
name        = "noise-spewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test harness: opens a TCP connection to a scry ingest server and emits random metrics, logs, traces, and profiles."

[[bin]]
name = "noise-spewer"
path = "src/main.rs"

[dependencies]
anyhow            = { workspace = true }
binschema-runtime = { workspace = true }
clap              = { workspace = true }
rand              = { workspace = true }
rand_distr        = { workspace = true }
scry-proto        = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
twox-hash         = { workspace = true }
uuid              = { workspace = true }
zstd              = { workspace = true }

[lints]
workspace = true
