[package]
name        = "scry-ingestd"
version     = "0.0.1"
edition.workspace = true
license.workspace = true
description = "scry ingest server daemon: thin CLI around scry-server. Listens for agents, optionally enables the storage path (WAL + parquet blocks → object storage + optional online catalog)."

[[bin]]
name = "scry-ingestd"
path = "src/main.rs"

[dependencies]
anyhow            = { workspace = true }
clap              = { workspace = true }
mimalloc          = { workspace = true }
num_cpus          = { workspace = true }
scry-catalog      = { workspace = true }
scry-objstore     = { workspace = true }
scry-server       = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
uuid              = { workspace = true }

[lints]
workspace = true
