[package]
name        = "scry-ingestd"
version     = "0.0.1"
edition.workspace = true
license.workspace = true
description = "scry ingest server daemon: thin CLI around scry-server. Listens for agents, optionally enables the storage path (WAL + parquet blocks → object storage + optional online catalog)."

[[bin]]
name = "scry-ingestd"
path = "src/main.rs"

[dependencies]
anyhow            = { workspace = true }
clap              = { workspace = true }
mimalloc          = { workspace = true }
num_cpus          = { workspace = true }
object_store      = { workspace = true }
scry-block        = { workspace = true }
scry-catalog      = { workspace = true }
scry-cluster      = { workspace = true }
scry-compact      = { workspace = true }
scry-objstore     = { workspace = true }
scry-retention    = { workspace = true }
scry-server       = { workspace = true }
scry-valkey       = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
uuid              = { workspace = true }

[lints]
workspace = true
