[package]
name        = "scry-list"
version     = "0.0.1"
edition.workspace = true
license.workspace = true
description = "v0.1 catalog inspector. Reconciles a (possibly empty) local catalog against a bucket and prints one line per block."

[[bin]]
name = "scry-list"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
scry-catalog       = { workspace = true }
scry-objstore      = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
