[package]
name        = "scry-list"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "v0.1 catalog inspector. Reconciles a (possibly empty) local catalog against a bucket and prints one line per block."

[lib]
name = "scry_list"
path = "src/lib.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
scry-catalog       = { workspace = true }
scry-objstore      = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }

[lints]
workspace = true
