[package]
name        = "scry-queryd"
version     = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Long-running query daemon speaking the binschema QueryFrame wire protocol over TCP. Wraps scry-server::QueryService — keeps the SessionContext, catalog handle, object store, and BufPool warm across queries so the CLI's per-process cold-start cost (~1.3 s) becomes a one-time daemon-startup cost."

[[bin]]
name = "scry-queryd"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
datafusion         = { workspace = true }
mimalloc           = { workspace = true }
scry-catalog       = { workspace = true }
scry-objstore      = { workspace = true }
scry-query         = { workspace = true }
scry-server        = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
