[package]
name        = "scry-queryd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-running query daemon speaking the binschema QueryFrame wire protocol over TCP. Wraps scry-server::QueryService — keeps the SessionContext, catalog handle, object store, and BufPool warm across queries so the CLI's per-process cold-start cost (~1.3 s) becomes a one-time daemon-startup cost."

[lib]
name = "scry_queryd"
path = "src/lib.rs"

# Dev/ops harness: a minimal client that speaks the QueryFrame wire so
# scripts (and humans) can drive a running `scry query` daemon without the
# TS desktop app. Mirrors `scry-gateway-probe`. Used by scripts/smoke.sh to
# assert the queryd result cache serves an identical replay as `cache=hit`.
[[bin]]
name = "scry-query-probe"
path = "src/bin/probe.rs"

[dependencies]
anyhow             = { workspace = true }
async-trait        = { workspace = true }
clap               = { workspace = true }
datafusion         = { workspace = true }
scry-catalog       = { workspace = true }
scry-cluster       = { workspace = true }
scry-match         = { workspace = true }
scry-objstore      = { workspace = true }
scry-proto         = { workspace = true }
scry-query         = { workspace = true }
scry-server        = { workspace = true }
scry-tail          = { workspace = true }
scry-valkey        = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
uuid               = { workspace = true }

[lints]
workspace = true
