[package]
name = "scry-webui"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "scry web UI server: serves the SolidJS query app to a browser and relays framed query bytes to scry-queryd over a password-gated session."

[[bin]]
name = "scry-webui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
cookie = { workspace = true }
mime_guess = { workspace = true }
mimalloc = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
